# qr-photo-rescue

./: .gitignore  LICENSE  PUBLISHING.md  README.md  pyproject.toml
docs/: case-study.md
qr_photo_rescue/: __init__.py  cli.py
